// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditSubtraction /> should render 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> should render after name is changed 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> should render after name is changed 2`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Foo"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> should render after nickname is changed 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> should render after nickname is changed 2`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Foo"
        />
      </InputGroup>
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<EditSubtraction /> should render when [show=false] 1`] = `
<Modal
  label="Edit Subtraction"
  onHide={[MockFunction]}
  show={false}
>
  <ModalHeader>
    Edit Subtraction
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Name
        </Input__InputLabel>
        <Input
          name="name"
          onChange={[Function]}
          value="Prunus persica"
        />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Nickname
        </Input__InputLabel>
        <Input
          name="nickname"
          onChange={[Function]}
          value="Peach"
        />
      </InputGroup>
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;
